Opened 12 years ago

Closed 12 years ago

#9302 closed bug (fixed)

The currentSelected Item in BListView is wrong after an AddList Insertion

Reported by: Janus Owned by: axeld
Priority: normal Milestone: R1
Component: Kits/Interface Kit Version: R1/Development
Keywords: BListView Cc:
Blocked By: Blocking:
Platform: All

Description

The currentSelected item goes at the end of the list after an AddList(list,index) insertion.

Attachments (1)

0001-Fix-9302.-The-selection-is-calculated-properly-after.patch (820 bytes ) - added by Janus 12 years ago.

Download all attachments as: .zip

Change History (3)

comment:1 by Janus, 12 years ago

patch: 01

comment:2 by korli, 12 years ago

Resolution: fixed
Status: newclosed

Edited and applied in hrev45174. Thanks!

Note: See TracTickets for help on using tickets.