Fix #9302. The selection is calculated properly after a list insertion (AddList with index)

Signed-off-by: Jerome Duval <jerome.duval@gmail.com>